Adds images and missing partials [#130403411]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -8,7 +8,7 @@ title: Routing
 
 <li><a href="./manage-domains-routes.html">Managing Cloud Foundry Domains and Routes</a></li>
 
-<li><a href="./enabling_ipv6.html.md.erb">Enabling IPv6 for Hosted Applications</a></li>
+<li><a href="./enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
 
 <li><a href="../concepts/architecture/router.html">(Go)Router</a></li>
 
