--- a/manage-domains-routes.html.md.erb
+++ b/manage-domains-routes.html.md.erb
@@ -9,7 +9,7 @@ If you are an administrator, you can manage custom shared domains and wildcard r
 
 For additional information about managing routes and domains, refer to the following topic:
 
-* [Routes and Domains](../devguide/deploy-apps/routes-domains.html)
+* [Routes and Domains](./routes-domains.html)
 
 ## <a id='create-shared-custom-domain'></a>Creating a Shared Custom Domain
 
