--- a/enabling_ipv6.html.md.erb
+++ b/enabling_ipv6.html.md.erb
@@ -26,4 +26,4 @@ The following diagram illustrates how a single load balancer can support traffic
 
 <%= image_tag 'cf_ipv4_ipv6.png'%>
 
-See [Routes and Domains](../devguide/deploy-apps/routes-domains.html) for more information about domains in <%= vars.product_full %>.
+See [Routes and Domains](./routes-domains.html) for more information about domains in <%= vars.product_full %>.
