--- a/routes-domains.html.md.erb
+++ b/routes-domains.html.md.erb
@@ -180,13 +180,13 @@ $ cf push myapp -d <%=vars.private_app_domain%> --hostname foo
 
 #### <a id='map-route-with-manifest'></a>Map a Route Using Application Manifest ####
 
-When you create or edit the manifest for an application, you can use the `host` and `domain` attributes to define the host and domain components of the application route, respectively. For more information, see [Application Manifests](../deploy-apps/manifest.html).
+When you create or edit the manifest for an application, you can use the `host` and `domain` attributes to define the host and domain components of the application route, respectively. For more information, see [Application Manifests](../devguide/deploy-apps/manifest.html).
 
 #### <a id='map-route-to-multiple-apps'></a>Map a Route to Multiple Apps ####
 
 <%= partial 'routing_conflict' %>
 
-See [Routing Conflicts](./troubleshoot-app-health.html#routing-conflict) for more information about troubleshooting this problem.
+See [Routing Conflicts](../devguide/deploy-apps/troubleshoot-app-health.html#routing-conflict) for more information about troubleshooting this problem.
 
 ### <a id='unmap-route'></a>Unmap a Route ###
 
