Renames subheading to Table of Contents [#130403411]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,7 +2,7 @@
 title: Routing
 ---
 
-## Cloud Foundry Routing
+## Table of Contents
 
 <li><a href="./routes-domains.html">Routes and Domains for Cloud Foundry Apps</a></li>
 
