--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -4,12 +4,12 @@ title: Routing
 
 ## Table of Contents
 
-<li><a href="./routes-domains.html">Routes and Domains for Cloud Foundry Apps</a></li>
+<li><a class="subnav" href="./routes-domains.html">Routes and Domains for Cloud Foundry Apps</a></li>
 
-<li><a href="./manage-domains-routes.html">Managing Cloud Foundry Domains and Routes</a></li>
+<li><a class="subnav" href="./manage-domains-routes.html">Managing Cloud Foundry Domains and Routes</a></li>
 
-<li><a href="./enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
+<li><a class="subnav" href="./enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
 
-<li><a href="../concepts/architecture/router.html">(Go)Router</a></li>
+<li><a class="subnav" href="../concepts/architecture/router.html">(Go)Router</a></li>
 
-<li><a href="./securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
+<li><a class="subnav" href="./securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
