Fixes broken routing subnav [#130403411]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -10,6 +10,6 @@ title: Routing
 
 <li><a class="subnav" href="./enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
 
-<li><a class="subnav" href="../concepts/architecture/router.html">(Go)Router</a></li>
+<li><a href="../concepts/architecture/router.html">(Go)Router</a></li>
 
 <li><a class="subnav" href="./securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
