Moves routing conflict partial to its original repo [#130403411]

--- a/routes-domains.html.md.erb
+++ b/routes-domains.html.md.erb
@@ -184,7 +184,7 @@ When you create or edit the manifest for an application, you can use the `host` 
 
 #### <a id='map-route-to-multiple-apps'></a>Map a Route to Multiple Apps ####
 
-<%= partial 'routing_conflict' %>
+<%= partial '../devguide/deploy-apps/routing_conflict' %>
 
 See [Routing Conflicts](../devguide/deploy-apps/troubleshoot-app-health.html#routing-conflict) for more information about troubleshooting this problem.
 
