Adjusts partial text [#130403411]

--- a/routes-domains.html.md.erb
+++ b/routes-domains.html.md.erb
@@ -184,7 +184,7 @@ When you create or edit the manifest for an application, you can use the `host` 
 
 #### <a id='map-route-to-multiple-apps'></a>Map a Route to Multiple Apps ####
 
-<%= partial '../devguide/deploy-apps/routing_conflict' %>
+Cloud Foundry allows multiple apps, or versions of the same app, to be mapped to the same route. This feature enables Blue-Green deployment. For more information see [Using Blue-Green Deployment to Reduce Downtime and Risk](../devguide/deploy-apps/blue-green.html).
 
 See [Routing Conflicts](../devguide/deploy-apps/troubleshoot-app-health.html#routing-conflict) for more information about troubleshooting this problem.
 
