--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -20,7 +20,11 @@ The documentation in this section is intended for developers and operators inter
 
 <li><a href="../adminguide/manage-domains-routes.html">Managing Cloud Foundry Domains and Routes</a></li>
 
+<li><a href="../adminguide/enabling-tcp-routing.html">Enabling TCP Routing</a></li>
+
 <li><a href="../adminguide/enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
+
+<li><a href="../adminguide/supporting-websockets.html">Supporting WebSockets</a></li>
 
 <li><a href="../devguide/services/route-binding.html">Manage Application Requests with Route Services</a></li>
 
@@ -30,9 +34,10 @@ The documentation in this section is intended for developers and operators inter
 
 <li><a href="../adminguide/securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
 
+<li><a href="../adminguide/configure-lb-healthcheck.html">Configuring Load Balancer Healthchecks for Cloud Foundry</a></li>
+
 <%= vars.ssl_term_vsphere %>
 
 <%= vars.lb_subnav %>
-
 
 
