Adds more topics to routing index [#130403411]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -28,6 +28,8 @@ The documentation in this section is intended for developers and operators inter
 
 <li><a href="../devguide/services/route-binding.html">Manage Application Requests with Route Services</a></li>
 
+<li><a href="../adminguide/zipkin_tracing.html">Enabling Zipkin Tracing</a></li>
+
 <li><a href="../adminguide/troubleshooting_slow_requests.html">Troubleshooting Slow Requests in Cloud Foundry</a></li>
 
 ### Manage Load Balancers
@@ -36,7 +38,13 @@ The documentation in this section is intended for developers and operators inter
 
 <li><a href="../adminguide/configure-lb-healthcheck.html">Configuring Load Balancer Healthchecks for Cloud Foundry</a></li>
 
+<%= vars.ssl_term_haproxy %>
+
 <%= vars.ssl_term_vsphere %>
+
+<%= vars.ssl_tls_subnav %>
+
+<%= vars.vsphere_az_subnav %>
 
 <%= vars.lb_subnav %>
 
