--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -14,6 +14,8 @@ The documentation in this section is intended for developers and operators inter
 
 <%= vars.tls_info_subnav %>
 
+<%= vars.vsphere_az_subnav %>
+
 <%= vars.er_network_subnav %>
 
 ### Manage and Troubleshoot Routing
