--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -12,6 +12,8 @@ The documentation in this section is intended for developers and operators inter
 
 <li><a href="../services/route-services.html">Route Services</a></li>
 
+<%= vars.vsphere_az_subnav %>
+
 <%= vars.er_network_subnav %>
 
 ### Manage and Troubleshoot Routing
@@ -36,7 +38,11 @@ The documentation in this section is intended for developers and operators inter
 
 <li><a href="../adminguide/configure-lb-healthcheck.html">Configuring Load Balancer Healthchecks for Cloud Foundry</a></li>
 
+<%= vars.ssl_term_haproxy %>
+
 <%= vars.ssl_term_vsphere %>
+
+<%= vars.ssl_tls_subnav %>
 
 <%= vars.lb_subnav %>
 
