Adds more topics to routing index [#130403411]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,6 +13,8 @@ The documentation in this section is intended for developers and operators inter
 
 <li><a href="../services/route-services.html">Route Services</a></li>
 
+<%= vars.vsphere_az_subnav %>
+
 <%= vars.er_network_subnav %>
 
 ### Manage and Troubleshoot Routing
@@ -33,7 +35,8 @@ The documentation in this section is intended for developers and operators inter
 
 <%= vars.ssl_term_vsphere %>
 
-<%= vars.lb_subnav %>
+<%= vars.ssl_tls_subnav %>
 
+<%= vars.lb_subnav %>
 
 
