Adds more topics to routing index [#130403411]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,3 +13,7 @@ title: Routing
 <li><a href="../concepts/architecture/router.html">(Go)Router</a></li>
 
 <li><a class="subnav" href="./securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
+
+<%= vars.ssl_tls_subnav %>
+
+<%= vars.vsphere_az_subnav %>
