Moves routing topics back to their homes for now [#133124189]
Moves images back to original repo [#133124189]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,18 +2,30 @@
 title: Routing
 ---
 
-## Table of Contents
-
-<li><a class="subnav" href="./routes-domains.html">Routes and Domains for Cloud Foundry Apps</a></li>
-
-<li><a class="subnav" href="./manage-domains-routes.html">Managing Cloud Foundry Domains and Routes</a></li>
-
-<li><a class="subnav" href="./enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
+## Understand Routing Components and Concepts
 
 <li><a href="../concepts/architecture/router.html">(Go)Router</a></li>
 
-<li><a class="subnav" href="./securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
+<li><a href="../services/route-services.html">Route Services</a></li>
 
 <%= vars.ssl_tls_subnav %>
 
 <%= vars.vsphere_az_subnav %>
+
+<%= vars.ert_network_subnav %>
+
+## Manage and Troubleshoot Routing
+
+<li><a href="../devguide/deploy-apps/routes-domains.html">Routes and Domains</a></li>
+
+<li><a href="../adminguide/manage-domains-routes.html">Managing Cloud Foundry Domains and Routes</a></li>
+
+<li><a href="../adminguide/enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
+
+<li><a href="../devguide/services/route-binding.html">Manage Application Requests with Route Services</a></li>
+
+<li><a href="../adminguide/securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
+
+<%= vars.ssl_term_vsphere %>
+
+<%= vars.lb_subnav %>
