Replace PAS Network Arch variable with link to CF Routing Arch topic [#165356905]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -16,7 +16,7 @@ The documentation in this section is intended for developers and operators inter
 
 <%= vars.vsphere_az_subnav %>
 
-<%= vars.er_network_subnav %>
+<li><a href="../concepts/cf-routing-architecture.html">Cloud Foundry Routing Architecture</a></li>
 
 ### Manage and Troubleshoot Routing
 
