--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,7 +2,7 @@
 title: Routing
 ---
 
-The documentation in this section is intended for developers and operators interested in <%= vars.first_product_name %> routing and load balancing.
+The documentation in this section is intended for developers and operators interested in <%= vars.product_name %> routing and load balancing.
 
 ### Understand Routing Components and Concepts
 
@@ -47,5 +47,3 @@ The documentation in this section is intended for developers and operators inter
 <%= vars.ssl_tls_subnav %>
 
 <%= vars.lb_subnav %>
-
-
