Added deprecation notice [#169140368]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,6 +2,8 @@
 title: Routing
 ---
 
+<%= partial '/pcf/deprecation-notice' %>
+
 The documentation in this section is intended for developers and operators interested in <%= vars.first_product_name %> routing and load balancing.
 
 ### Understand Routing Components and Concepts
