Replaced 'Cloud Foundry' with runtime variables

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -6,39 +6,41 @@ The documentation in this section is intended for developers and operators inter
 
 ### Understand Routing Components and Concepts
 
-<li><a href="../concepts/architecture/router.html">Gorouter</a></li>
+* [Gorouter](./concepts/architecture/router.html)
 
-<li><a href="../concepts/http-routing.html">HTTP Routing</a></li>
+* [HTTP Routing](../concepts/http-routing.html)
 
-<li><a href="../services/route-services.html">Route Services</a></li>
+* [Route Services](../services/route-services.html)
 
 <%= vars.tls_info_subnav %>
 
 <%= vars.vsphere_az_subnav %>
 
-<li><a href="../concepts/cf-routing-architecture.html">Cloud Foundry Routing Architecture</a></li>
+* [<%= vars.product_short %> Routing Architecture](../concepts/cf-routing-architecture.html)
 
 ### Manage and Troubleshoot Routing
 
-<li><a href="../devguide/deploy-apps/routes-domains.html">Routes and Domains</a></li>
+* [Routes and Domains](../devguide/deploy-apps/routes-domains.html)
 
-<li><a href="../adminguide/enabling-tcp-routing.html">Enabling TCP Routing</a></li>
+* [Enabling TCP Routing](../adminguide/enabling-tcp-routing.html)
+
 <%= vars.tcp_ert_subnav %>
-<li><a href="../adminguide/troubleshooting_tcp_routing.html">Troubleshooting TCP Routes</a></li>
 
-<li><a href="../adminguide/enabling_ipv6.html">Enabling IPv6 for Hosted Applications</a></li>
+* [Troubleshooting TCP Routes](../adminguide/troubleshooting_tcp_routing.html)
 
-<li><a href="../devguide/services/route-binding.html">Manage Application Requests with Route Services</a></li>
+* [Enabling IPv6 for Hosted Apps](../adminguide/enabling_ipv6.html)
 
-<li><a href="../adminguide/routing-keepalive.html">Router Idle Keepalive Connections</a></li>
+* [Manage App Requests with Route Services](../devguide/services/route-binding.html)
 
-<li><a href="../adminguide/routing-is.html">Routing Isolation Segments</a></li>
+* [Router Idle Keep-Alive Connections](../adminguide/routing-keepalive.html)
+
+* [Routing Isolation Segments](../adminguide/routing-is.html)
 
 ### Manage Load Balancers
 
-<li><a href="../adminguide/securing-traffic.html">Securing Traffic into Cloud Foundry</a></li>
+* [Securing Traffic into <%= vars.product_short %>](../adminguide/securing-traffic.html)
 
-<li><a href="../adminguide/configure-lb-healthcheck.html">Configuring Load Balancer Healthchecks for Cloud Foundry</a></li>
+* [Configuring Load Balancer Health Checks for <%= vars.product_short %> Routers](../adminguide/configure-lb-healthcheck.html)
 
 <%= vars.ssl_term_haproxy %>
 
@@ -47,5 +49,3 @@ The documentation in this section is intended for developers and operators inter
 <%= vars.ssl_tls_subnav %>
 
 <%= vars.lb_subnav %>
-
-
