fix bad link in docs-routing index.html

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -6,7 +6,7 @@ The documentation in this section is intended for developers and operators inter
 
 ### Understand Routing Components and Concepts
 
-* [Gorouter](./concepts/architecture/router.html)
+* [Gorouter](../concepts/architecture/router.html)
 
 * [HTTP Routing](../concepts/http-routing.html)
 
