--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -26,7 +26,7 @@ The documentation in this section is intended for developers and operators inter
 
 <%= vars.tcp_ert_subnav %>
 
-* [Troubleshooting TCP Routes](../adminguide/troubleshooting_tcp_routing.html)
+* [Troubleshooting TCP Routing](../adminguide/troubleshooting_tcp_routing.html)
 
 * [Enabling IPv6 for Hosted Apps](../adminguide/enabling_ipv6.html)
 
