Corrected topic title [#171530491]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -32,7 +32,7 @@ The documentation in this section is intended for developers and operators inter
 
 * [Manage App Requests with Route Services](../devguide/services/route-binding.html)
 
-* [Router Idle Keep-Alive Connections](../adminguide/routing-keepalive.html)
+* [Gorouter Back End Keep-Alive Connections](../adminguide/routing-keepalive.html)
 
 * [Routing Isolation Segments](../adminguide/routing-is.html)
 
