[#176253713] Corrected cross-ref title

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -28,7 +28,7 @@ The documentation in this section is intended for developers and operators inter
 
 * [Enabling IPv6 for Hosted Apps](../adminguide/enabling_ipv6.html)
 
-* [Manage App Requests with Route Services](../devguide/services/route-binding.html)
+* [Managing App Requests with Route Services](../devguide/services/route-binding.html)
 
 * [Gorouter Back End Keep-Alive Connections](../adminguide/routing-keepalive.html)
 
